--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,25 @@
+body {
+	background-color: #e6e6e6;
+}
+
+footer {
+	background-color: #b5b5b5;
+}
+
 header {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	position: absolute;
+}
+
+main {
+	padding-top: 7vw;
+}
+
+.logoImage {
+	height: 2.4vw;
+	padding-top: 10px;
 }
 
 .navigation {
